# FRA532_LAB1

./: README.md  frames_2025-03-01_02.44.41.gv
src/ack_description/: CMakeLists.txt  package.xml
src/ack_description/config/: gazebo_controllers.yaml
src/ack_description/description/: limo_ackerman.gazebo  limo_ackerman.xacro  limo_gazebo.gazebo  limo_steering_hinge.xacro  limo_xacro.xacro
src/ack_description/launch/: load_world_into_gazebo.launch.py  rsp.launch.py  sim.launch.py
src/ack_description/meshes/: Body.STL  Wheel.STL
src/ack_description/rviz/: default_config.rviz  lab1-1_validate_config.rviz
src/ack_description/urdf/: gazebo.xacro  imu.xacro  map_gazebo.xml  robot.xacro  transmission.xacro
src/ack_description/worlds/: basic.world
src/ack_gazebo/: CMakeLists.txt  package.xml
src/ackermann_controller/: CMakeLists.txt  Tim_LAB1-3_README.md  Tim_LAB1_README.md  Tim_ekf_README.md  package.xml  test.md
src/ackermann_controller/launch/: controller.launch.py
src/ackermann_controller/scripts/: ackermann_fk.py  ackermann_ik.py  controller_validate_node.py  data_saver.py  dummy_script.py  ekf_calculate_mean_error.py  ekf_node.py  ekf_val_with_cal.py  ekf_valddation_full.py  ekf_validation_node.py  gps_emulator.py  kinematic_validate_node.py  kinematics_validate.py  lab1_validate_node.py  pid_controller.py  pure_pursuit_controller.py  stanley_controller.py
src/ackermann_controller/src/: cpp_node.cpp
src/ackermann_controller/yaml/: ekf_mea_yaw_rate_error.yaml
src/ackermann_controller/yaml/lab1.2/: pid-0.25.yaml  pid-0.5.yaml  pure-0.25.yaml  pure-0.5.yaml  stan-0.25.yaml  stan-0.5.yaml
src/description/: CMakeLists.txt  package.xml
src/description/config/: gazebo_controllers.yaml
src/description/description/: gazebo_control.xacro  robot.urdf.xacro  (+1 more)
(+3 files in other folders)
